# fast-task

./: .gitignore  CHANGELOG.md  Cargo.toml  plan.md  todo.md
.claude/commands/: sync-plan.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/database/: database.rs  history.rs  http_database.rs  migrations.rs  mod.rs  models.rs
src/local_share/: server.rs
src/local_share/web/: index.html
src/ui/: app.rs  info.rs  keys.rs  mod.rs  projects.rs  tasks.rs  theme.rs
src/ui/widgets/: common.rs  errors.rs
tests/: database_integration.rs
