[package]
name = "fast-task"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.8", features = ["ws"] }
dirs = "6.0.0"
eframe = "0.34.1"
egui = { version = "0.34.1", features = ["serde"] }
egui_extras = { version = "0.34.1", features = ["datepicker"] }
jiff = "0.2.23"
polodb_core = "5.1.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
resvg = "0.44"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
